## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign
EXTRA_DIST = 00readme.autoconf CHANGES.euc MACHINES.euc \
	MACHINES2.euc PROBLEMS.euc README.euc IFNAMES \
	change-114e.txt change-114g.txt change-114h.txt change-114i.txt \
	config.eng config.jpn.euc \
	header.doc.euc
SUBDIRS= man src tests
