## Process this file with automake to produce Makefile.in
check_SCRIPTS = lha-test
EXTRA_DIST =	lha-test1 \
		lha-test2 \
		lha-test3 \
		lha-test4 \
		lha-test5 \
		lha-test6 \
		lha-test7 \
		lha-test7_lv0 \
		lha-test7_lv1 \
		lha-test7_lvg \
		lha-test8 \
		lha-test9 \
		lha-test10 \
		lha-test11 \
		lha-test12 \
		lha-test13 \
		lha-test14 \
		lha-test15 \
		lha-test16 \
		lha-test16-lg.lzh \
		lha-test16-l0.lzh \
		lha-test16-l1.lzh \
		lha-test16-l2.lzh \
		lha-test17 \
		lha-test18 \
		lha-test19 \
		lha-test20 \
		lha-test20-cap.lzh \
		lha-test20-euc.lzh \
		lha-test20-list-cap.txt \
		lha-test20-list-euc.txt \
		lha-test20-list-sjis.txt \
		lha-test20-list-utf8.txt \
		lha-test20-sjis.lzh \
		lha-test20-utf8.lzh \
		lha-test51 \
		lha-test51-2G.lzh \
		lha-test52 \
		lha-test52-4G.lzh

DISTCLEANFILES = test.log

check-local:
	@sh_for_lha_test@ ./lha-test
